--- a/html/About.html
+++ b/html/About.html
@@ -9,7 +9,21 @@
     <title>About</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="/index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="#">About</a>
+        <a href="#contact">contact</a>
+        <a href="Docs.html">Docs</a>
+    </nav>
+
+    <a href="login.html">Sign-in</a>
+    <a href="signup.html">Sign-up</a>
+    <a href="profile.html">Profile</a>
+
+    <div id="contact">
+
+    </div>
 
 
 
