--- a/html/products.html
+++ b/html/products.html
@@ -9,7 +9,21 @@
     <title>Products</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="/index.html">Home</a>
+        <a href="#">Products</a>
+        <a href="html/About.html">About</a>
+        <a href="#contact">contact</a>
+        <a href="Docs.html">Docs</a>
+    </nav>
+
+    <a href="login.html">Sign-in</a>
+    <a href="signup.html">Sign-up</a>
+    <a href="profile.html">Profile</a>
+
+    <div id="contact">
+
+    </div>
 
 
 
