--- a/html/profile.html
+++ b/html/profile.html
@@ -9,6 +9,21 @@
     <title>Profile</title>
 </head>
 <body>
+    <nav>
+        <a href="/index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="html/About.html">About</a>
+        <a href="#contact">contact</a>
+        <a href="Docs.html">Docs</a>
+    </nav>
+
+    <a href="login.html">Sign-in</a>
+    <a href="signup.html">Sign-up</a>
+    <a href="#">Profile</a>
+
+    <div id="contact">
+
+    </div>
     
 
 
