--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fullscreen responsive login page</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="signin.css">
 </head>
 <body>
     <section>
@@ -14,9 +14,16 @@
         </div>
         <div class="contentBx">
             <div class="formBx">
-                <h2>Login</h2>
-                <form>
-                   
+                <h2>Sign up</h2>
+                <form action="login.html">
+                    <div class="inputBx">
+                        <span>First name</span>
+                        <input type="text" name="" placeholder="Enter name" required>
+                    </div>
+                    <div class="inputBx">
+                        <span>Last name</span>
+                        <input type="text" name="" placeholder="Enter name" required>
+                    </div>
                     <div class="inputBx">
                         <span>Email</span>
                         <input type="email" name="" placeholder="Enter Email" required>
@@ -25,12 +32,15 @@
                         <span>Password</span>
                         <input type="password" name="" placeholder="Enter password" required>
                     </div>
-                   
                     <div class="inputBx">
-                        <input type="submit" value="Login">
+                        <span>comfirm password</span>
+                        <input type="password" name="" placeholder="Enter password" required>
                     </div>
                     <div class="inputBx">
-                      <p>Don't have an account yet? Sign up<a href="signup.html"> here</a></p>
+                        <input type="submit" value="Sign up">
+                    </div>
+                    <div class="inputBx">
+                      <p>Already have an account? Login <a href="login.html">here</a></p>
                     </div>
                 </form>
             </div>
